# SarvanOM

./: .dockerignore  .env.docker  .env.docker.template  .env.template  .gitignore  .pre-commit-config.yaml  ADDITIONAL_DUPLICATE_LOGIC_REFACTORING.md  ADVANCED_FEATURES_DOCUMENTATION.md  ADVANCED_FEATURES_IMPLEMENTATION_SUMMARY.md  AGENT_AUDIT_AND_REFACTORING.md  AGENT_SERVICE_MIGRATION_SUMMARY.md  AGENT_TOOLKIT_IMPLEMENTATION.md  AI_IMPROVEMENTS_SUMMARY.md  ALWAYS_ON_PERFORMANCE_FINAL_SUMMARY.md  ALWAYS_ON_PERFORMANCE_SUMMARY.md  API_REVIEW_AND_RECOMMENDATIONS.md  APP_FACTORY_REFACTORING_SUMMARY.md  ASYNC_BACKEND_AUDIT_SUMMARY.md  ASYNC_IO_CONVERSION_COMPLETE.md  ASYNC_IO_CONVERSION_FINAL_STATUS.md  ASYNC_IO_IMPLEMENTATION_FINAL_ANALYSIS.md  ASYNC_IO_IMPLEMENTATION_FINAL_REPORT.md  ASYNC_IO_IMPLEMENTATION_STATUS.md  AUTHENTICATION_SYSTEM_IMPLEMENTATION_SUMMARY.md  BACKEND_CONSOLIDATION_PLAN.md  BACKEND_ENVIRONMENT_VARIABLES_REFACTOR_SUMMARY.md  BACKEND_INTEGRATION_TEST_GUIDE.md  BACKEND_INTEGRATION_TEST_REPORT.md  BACKEND_INTEGRATION_TEST_SUMMARY.md  BACKEND_LLM_INTEGRATION_RESULTS.md  BACKEND_RESTART_AND_LLM_INTEGRATION_TEST_REPORT.md  BACKEND_RESTRUCTURE_SUMMARY.md  BACKEND_VERIFICATION_REPORT.md  CACHE_MANAGER_POSTGRES_IMPLEMENTATION.md  CHANGELOG.md  CITATION_AGENT_IMPLEMENTATION_SUMMARY.md  CI_CD_AUDIT_AND_REFACTORING.md  CI_COMPLIANCE_SUITE_IMPLEMENTATION.md  CLEANUP_AND_RESTRUCTURING_SUMMARY.md  CLEANUP_COMPLETED.md  (+533 more)
.github/: pull_request_template.md
backend/: README.md  __init__.py  main.py  test_structure.py
code_garden/: CLEANUP_SUMMARY.md  baseline_metrics.json  cleanup_plan.json  config_normalization_checklist.txt  guardrails_comprehensive_report_20250902_103254.json  guardrails_comprehensive_report_20250902_103827.json  guardrails_comprehensive_report_20250902_103903.json  guardrails_comprehensive_report_20250902_110632.json  guardrails_comprehensive_report_20250902_111620.html  guardrails_comprehensive_report_20250902_111620.json  guardrails_comprehensive_report_20250902_111620.md  guardrails_comprehensive_report_20250902_111724.html  guardrails_comprehensive_report_20250902_111724.json  guardrails_comprehensive_report_20250902_111724.md  guardrails_comprehensive_report_20250902_121708.json  guardrails_comprehensive_report_20250902_121708.md  guardrails_comprehensive_report_latest.html  guardrails_diagnosis_report_20250902_113357.json  guardrails_diagnosis_report_20250902_121106.json  guardrails_diagnosis_report_20250902_122053.json  guardrails_diagnosis_report_20250902_122335.json  guardrails_diagnosis_report_20250902_124359.json  guardrails_diagnosis_report_20250902_124706.json  guardrails_diagnosis_report_20250902_134040.json  guardrails_diagnosis_report_20250902_135317.json  guardrails_diagnosis_report_20250902_140152.json  keep_rules.yml  observability_final_verification.md  observability_implementation_summary.md  observability_verification_summary.md  parallel_retrieval_implementation_summary.md  plan.json  real_service_integration_summary.md  retrieval_performance_final_comprehensive_summary.md  retrieval_performance_final_status.md  retrieval_performance_implementation_summary.md  scoring_router_final_status.md  scoring_router_implementation_checklist.txt  security_deployment_checklist.md  security_hardening_final_status.md  (+6 more)
config/: default_credentials.md  development.yaml  huggingface_config.py  model_catalog.json  model_selection.json  production-config.md  production.yaml  services.json  staging.yaml  testing.yaml  zero_budget_llm_alternatives.json
data/: users.json
deprecated/: agents_backup.py
docs/: ARCHITECTURE_OPTIMIZATION_ANALYSIS_2025.md  BACKEND_CONSOLIDATION_SUMMARY.md  CLEANUP_COMPLETION_REPORT.md  COMPLETE_CONVERSATION_ANALYSIS_2025.md  COMPREHENSIVE_ISSUES_ANALYSIS.md  ENVIRONMENT_VARIABLES.md  FINAL_CLEANUP_COMPLETION_REPORT.md  GUARDRAILS_ERRORS_FIXED.md  GUARDRAILS_IMPLEMENTATION.md  GUARDRAILS_IMPLEMENTATION_STATUS.md  GUARDRAILS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TASKS.md  MAANG_STANDARDS_VALIDATION.md  POSTGRESQL_FIX_SUMMARY.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_GUIDE.md  REAL_LLM_TEST_RESULTS.md  REAL_QUERY_IMPLEMENTATION_SUMMARY.md  RESILIENCE_SYSTEM.md  SARVANOM_BACKEND_ARCHITECTURE_OVERVIEW.md  SOLUTION_REAL_API_KEYS.md  TESTING_INSTRUCTIONS.md  VENV_SETUP_COMPLETE.md  env_inventory.md
documentation/: BACKEND_SERVICES_STATUS.md  CLIENT_SIDE_FETCHING.md  GPU_ORCHESTRATION_GUIDE.md  SarvanOM_Market_Analysis.md  SarvanOM_Problem_Definition.md  SarvanOM_Solution_Whitepaper.md  Sarvanom_blueprint.md
examples/: cache_manager_integration.py  llm_usage_example.py  memory_manager_integration.py  query_classifier_example.py
frontend/: .eslintrc.json  .lighthouserc.js  ACCESSIBILITY_CHECKLIST.md  API_CONFIGURATION.md  APP_ROUTER_COMPLIANCE.md  COMPREHENSIVE_QUERY_GUIDE.md  COMPREHENSIVE_QUERY_INTEGRATION_GUIDE.md  COSMIC_INTERFACE.md  COSMIC_LOADER_SUMMARY.md  COSMIC_PRO_DESIGN_SPEC.md  DIMENSIONS.md  Dockerfile  Dockerfile.dev  EXPERT_REVIEW_IMPLEMENTATION.md  FAANG_REFACTOR_PLAN.md  FRONTEND_ANALYSIS_REPORT.md  LOADER_IMPLEMENTATION_SUMMARY.md  NEW_UI_FEATURES.md  README.md  ROUTING_AUDIT_REPORT.md  TESTING.md  TESTING_GUIDE.md  VISUAL_REFERENCE_GUIDE.md  env.local.template  eslint.config.js  eslint.config.mjs  health-check.js  jest.config.js  jest.moduleNameMapping.js  lighthouse.config.js  mock-backend.js  next.config.js  package-lock.json  package.json  playwright.config.ts  restructure_frontend.md  simple-mock-backend.js  tailwind.config.js  test_comprehensive_integration.js  test_integration.js  (+4 more)
infrastructure/: main.tf  variables.tf
load_testing/: load_test_framework.py  performance_monitor.py  service_specific_tests.py
monitoring/: grafana_dashboard.json  prometheus.yml
nginx/: nginx.conf
operations/: deployment_pipeline.py
scripts/: add_persistent_data.py  apply_all_fixes.sh  apply_critical_fixes.sh  canonical_mapper.py  check_env_vars.py  check_hardcoded_values.py  check_ollama_models.py  check_vector_backends.py  ci-gates.py  ci_guardrails.py  complete_env_setup.py  dev.ps1  (+107 more)
(+1070 files in other folders)
